tests/semantic_analysis/error/break_outside.c
break_outside.c:3:2: error: wrong token \0